5288 Adjust field naming on message handler